[package]
name = "server"
version = "0.1.0"
edition = "2024"
authors = ["Juan Milkah <juanmilkah@gmail.com>"]
description = "A school management system server"
repository = "https://github.com/juanmilkah/sms/server"
license ="MIT"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = "0.8.3"
tokio = { version = "1.43.0", features = ["full"] }
